# lua-zephyr-module

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  README.org  app.overlay  prj.conf
app/: .gitlab-ci.yml  CMakeLists.txt  dbg.conf  prj.conf
app/boards/: esp32c3_devkitm.conf  esp32c3_devkitm.overlay
app/lua/: main.lua
app/src/: luac.h  main.c  shared.h  shell.c
lib/: CMakeLists.txt  Kconfig
lib/lua/: CMakeLists.txt  Kconfig  Makefile  lauxlib.c  onelua.c  stubs.c
lib/lua/src/: .gitignore  lauxlib.h  loslib.c  lua  luac  onelua.c
src/: luazephyrlib.c  main.c  shell.c
src/lua/: lauxlib.c  lauxlib.h  ldo.c  ldo.cpp  linit.c  liolib.c  loslib.c  lstate.c  ltablib.c  lua  luac  luaconf.h  lualib.h
zephyr/: module.yml
